tdf#131540 DOCX export: fix OLE position in v:shape

If the OLE icon was anchored to page, it moved a bit,
because exporting mso-position-horizontal-relative:text
instead of mso-position-horizontal-relative:page in v:shape.

Change-Id: I4eb7bdd648a9b9b6aee48782a0086e82cfc55107
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108938
Tested-by: Jenkins
Reviewed-by: Balazs Varga <varga.balazs3@nisz.hu>
Reviewed-by: László Németh <nemeth@numbertext.org>